<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/bg_huiyuanvip"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/index_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="#00000000"
        android:minHeight="?attr/actionBarSize"
        android:visibility="visible"></android.support.v7.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="@drawable/ll_hygz_bg"
        android:orientation="vertical"
        android:padding="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/hyts"
            android:textSize="14sp"/>
        <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:text="@string/hyts1"
        android:layout_marginTop="20dp"
        android:textSize="13sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/hyts2"
            android:layout_marginTop="5dp"
            android:textSize="13sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/hyts3"
            android:layout_marginTop="5dp"
            android:textSize="13sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/hyts4"
            android:layout_marginTop="5dp"
            android:textSize="13sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/hyts5"
            android:layout_marginTop="5dp"
            android:textSize="13sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/hyts6"
            android:layout_marginTop="5dp"
            android:textSize="13sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/hyts7"
            android:layout_marginTop="5dp"
            android:textSize="13sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/hyts8"
            android:layout_marginTop="5dp"
            android:textSize="13sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/hyts9"
            android:layout_marginTop="5dp"
            android:textSize="13sp"/>
    </LinearLayout>


</RelativeLayout>