<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_color"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/index_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/toolbar_color"
        android:minHeight="?attr/actionBarSize"
        android:visibility="visible">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="兑换置顶"
            android:textColor="@color/white"
            android:textSize="17sp" />

    </android.support.v7.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:paddingBottom="15dp"
                android:paddingLeft="20dp"
                android:paddingTop="15dp"
                android:text="兑换置顶次数"
                android:textColor="#666666"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="@dimen/dimen_1"
                android:background="@color/white"
                android:orientation="horizontal"
                android:paddingTop="15dp"
                android:weightSum="3">

                <RelativeLayout
                    android:id="@+id/rl_zd1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1"

                    android:background="@drawable/rl_buy_zd_bg_n"
                    android:padding="2dp">

                    <TextView
                        android:id="@+id/tv_num1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/tv_zdsyj_bg"
                        android:gravity="center"
                        android:paddingBottom="15dp"
                        android:paddingTop="15dp"
                        android:text="1次置顶"
                        android:textColor="#F39C09"
                        android:textSize="18sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/tv_num1"
                        android:background="@drawable/tv_zdxyj_bg"
                        android:gravity="center"
                        android:paddingBottom="5dp"
                        android:text="8狐币"
                        android:textColor="#969696"
                        android:textSize="15sp" />

                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:clipToPadding="false"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentTop="true"
                        android:scaleType="fitXY"
                        android:src="@mipmap/xingzhuang_bao" />


                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/rl_zd2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/rl_buy_zd_bg_n"
                    android:padding="2dp">

                    <TextView
                        android:id="@+id/tv_num2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/tv_zdsyj_bg"
                        android:gravity="center"
                        android:paddingBottom="15dp"
                        android:paddingTop="15dp"
                        android:text="5次置顶"
                        android:textColor="#F39C09"
                        android:textSize="18sp" />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/tv_num2"
                        android:background="@drawable/tv_zdxyj_bg">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:paddingBottom="5dp"
                            android:text="36狐币"
                            android:textColor="#969696"
                            android:textSize="15sp" />

                        <ImageView
                            android:layout_width="20dp"
                            android:layout_height="10dp"
                            android:layout_alignParentRight="true"
                            android:layout_marginTop="10dp"
                            android:scaleType="fitXY"
                            android:src="@mipmap/jiuzhe" />
                    </RelativeLayout>


                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/rl_zd3"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="15dp"
                    android:layout_weight="1"
                    android:background="@drawable/rl_buy_zd_bg_n"
                    android:padding="2dp">

                    <TextView
                        android:id="@+id/tv_num3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/tv_zdsyj_bg"
                        android:gravity="center"
                        android:paddingBottom="15dp"
                        android:paddingTop="15dp"
                        android:text="10次置顶"
                        android:textColor="#F39C09"
                        android:textSize="18sp" />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/tv_num3"
                        android:background="@drawable/tv_zdxyj_bg">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:paddingBottom="5dp"
                            android:text="64狐币"
                            android:textColor="#969696"
                            android:textSize="15sp" />

                        <ImageView
                            android:layout_width="20dp"
                            android:layout_height="10dp"
                            android:layout_alignParentRight="true"
                            android:layout_marginTop="10dp"
                            android:scaleType="fitXY"
                            android:src="@mipmap/bazhe" />
                    </RelativeLayout>


                </RelativeLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="@dimen/dimen_1"
                android:background="@color/white"
                android:orientation="horizontal"
                android:paddingTop="15dp"
                android:weightSum="3">

                <RelativeLayout
                    android:id="@+id/rl_zd4"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/rl_buy_zd_bg_n"
                    android:padding="2dp">

                    <TextView
                        android:id="@+id/tv_num4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/tv_zdsyj_bg"
                        android:gravity="center"
                        android:paddingBottom="15dp"
                        android:paddingTop="15dp"
                        android:text="20次置顶"
                        android:textColor="#F39C09"
                        android:textSize="18sp" />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/tv_num4"
                        android:background="@drawable/tv_zdxyj_bg">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:paddingBottom="5dp"
                            android:text="112狐币"
                            android:textColor="#969696"
                            android:textSize="15sp" />

                        <ImageView
                            android:layout_width="20dp"
                            android:layout_height="10dp"
                            android:layout_alignParentRight="true"
                            android:layout_marginTop="10dp"
                            android:scaleType="fitXY"
                            android:src="@mipmap/qizhe" />
                    </RelativeLayout>


                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/rl_zd5"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/rl_buy_zd_bg_n"
                    android:padding="2dp">

                    <TextView
                        android:id="@+id/tv_num5"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/tv_zdsyj_bg"
                        android:gravity="center"
                        android:paddingBottom="15dp"
                        android:paddingTop="15dp"
                        android:text="30次置顶"
                        android:textColor="#F39C09"
                        android:textSize="18sp" />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/tv_num5"
                        android:background="@drawable/tv_zdxyj_bg">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:paddingBottom="5dp"
                            android:text="144狐币"
                            android:textColor="#969696"
                            android:textSize="15sp" />

                        <ImageView
                            android:layout_width="20dp"
                            android:layout_height="10dp"
                            android:layout_alignParentRight="true"
                            android:layout_marginTop="10dp"
                            android:scaleType="fitXY"
                            android:src="@mipmap/liuzhe" />
                    </RelativeLayout>


                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/rl_zd6"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="15dp"
                    android:layout_weight="1"
                    android:background="@drawable/rl_buy_zd_bg_n"
                    android:padding="2dp">

                    <TextView
                        android:id="@+id/tv_num6"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/tv_zdsyj_bg"
                        android:gravity="center"
                        android:paddingBottom="15dp"
                        android:paddingTop="15dp"
                        android:text="50次置顶"
                        android:textColor="#F39C09"
                        android:textSize="18sp" />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/tv_num6"
                        android:background="@drawable/tv_zdxyj_bg">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:paddingBottom="5dp"
                            android:text="200狐币"
                            android:textColor="#969696"
                            android:textSize="15sp" />

                        <ImageView
                            android:layout_width="20dp"
                            android:layout_height="10dp"
                            android:layout_alignParentRight="true"
                            android:layout_marginTop="10dp"
                            android:scaleType="fitXY"
                            android:src="@mipmap/wuzhi" />
                    </RelativeLayout>

                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:clipToPadding="false"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentTop="true"
                        android:scaleType="fitXY"
                        android:src="@mipmap/xingzhuang_bao" />

                </RelativeLayout>
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:background="@color/white"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="15dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="账户余额:"
                    android:textColor="#666666"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tv_have"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:text="0狐币"
                    android:textColor="#999999"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:text="需支付:"
                    android:textColor="#666666"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tv_needpay"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:text="0狐币"
                    android:textColor="#999999"
                    android:textSize="16sp" />
            </LinearLayout>

            <Button
                android:id="@+id/btn_dh"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:background="@drawable/bt_bg_round_dark"
                android:gravity="center"
                android:text="立即兑换"
                android:textColor="@color/white" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:textColor="#666666"
                android:layout_marginLeft="15dp"
                android:text="@string/dhzd1"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:textColor="#666666"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="15dp"
                android:text="@string/dhzd2"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:textColor="#666666"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="15dp"
                android:text="@string/dhzd3"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:textColor="#666666"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="15dp"
                android:text="@string/dhzd4"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:textColor="#666666"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="15dp"
                android:text="@string/dhzd5"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>